bynkc/tests/fixtures/negative/267_browser_target_workers/src/app/demo.bynk
context app.demo

consumes bynk { Clock }

service demo {
  on call() -> Effect[Instant] given Clock {
    let now <- Clock.now()
    now
  }
}
